# examples

barq-todo/: .gitignore  README.md  package.json  todo.js
barq_flexible_sync_e2e/: .gitignore  CMakeLists.txt  README.md  run_flx_e2e.sh
barq_flexible_sync_e2e/src/: main.cpp
barq_kotlin_maven_demo/: README.md  build.gradle.kts  settings.gradle.kts
barq_multitenant_e2e/: .gitignore  CMakeLists.txt  README.md  run_e2e.sh
barq_multitenant_e2e/src/: main.cpp
barq_native_demo/: .gitignore  CMakeLists.txt  README.md
barq_native_demo/src/: main.cpp
barq_retro_chat/: .dockerignore  .gitignore  Dockerfile  README.md  build.gradle.kts  docker-compose.yml  docker-entrypoint.sh  settings.gradle.kts
barq_retro_chat/client/: build.gradle.kts
barq_retro_chat/client/src/jsMain/kotlin/io/github/barqdb/chat/client/: Main.kt  Names.kt  Styles.kt
barq_retro_chat/client/src/jsMain/resources/: index.html
barq_retro_chat/gradle/wrapper/: gradle-wrapper.properties
barq_retro_chat/server/: build.gradle.kts
barq_retro_chat/server/src/main/kotlin/io/github/barqdb/chat/server/: ChatStore.kt  Content.kt  Models.kt  Seeder.kt  Server.kt
barq_retro_chat/server/src/main/resources/: logback.xml
barq_retro_chat/shared/: build.gradle.kts
barq_retro_chat/shared/src/commonMain/kotlin/io/github/barqdb/chat/protocol/: Nick.kt  Protocol.kt
